2004-10-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b244

	* Change: Missing echo in login.inc

2004-10-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b243

	* Change: Migrate the config wizard to use the Gallery session for
	  data storage instead of making gigantic, problematic forms.
	  (This solves such issues as urldecoding too many times.)

2004-10-20  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b242

	* Change: Added dir="ltr" around image frames. Next step in Bug #869641.

2004-10-19  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b241

	* Fix: Breadcrumb in search had no Border.

	* Change: Rewrite of search.php
	  - We looped twice through complete albumDB. Now only onces.
	  - All search results are now in an array, therefore we can separate
	    code from html output.
	  - Little Layout change.

	* Change: Adjust layout/searchdraw.inc to rewritten search.php

	* Change: intented search header

	* Fix: Added cpgnuke to header and footer wrapper

2004-10-18  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b240

	* Change: Reverted Change in ml_pulldown. a combo or flag for 1 language makes no sense.

2004-10-18  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b239

	* Change: Present a URL to re-login if a session hijack is detected

	* Change: Don't detect a hijack if there is no remoteHost defined
	  in the session (upgrade scenario)

2004-10-18  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b238

	* Change: Extra security for sessions.
	  When the initial session is created, we store the REMOTE_ADDR
	  taken from the server, on each load, we compare the stored address
	  against the information in the current request.  If the address
	  has changed, we die with an attempted security breach.  This prevents
	  hijacking of sessions simply by knowing/sniffing the PHPSESSID from
	  cookies.

	* Change: Use !empty() instead of "sizeof() > 1" in ml_pulldown

2004-10-18  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b237
