@@ -324,7 +324,7 @@ $constants =  array_merge(
 	'watermarkDir' => array(
 	'prompt' => _("Watermark directory"),
 	'desc' => sprintf(_("The full path on physical disk to the directory where your watermark images will be stored.  This directory may contain .png, .tif, and .gif images used to overlay visible watermarks on photos. These formats are supported because they may contain transparency or alpha channels.  <b>Leaving this blank will disable watermarking support.</b> Note that this directory needs to have read access by the user who is running the web server (in your case this user is %s)."),
-			"<b>". $webserver_user . "</b>") . newIn("1.4.3"),
+			"<b>". $webserver_user . "</b>"),
 		'value' => "",
 		'enabled' => $enablewatermark,
 		'optional' => 1,
