@@ -1,3 +1,11 @@
+2004-10-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b245
+
+	* Fix: Multiple deletion of comments failed.
+
+	* Fix: Prevent errormessage on reload after deleting multiple comments.
+
+	* Change: If someone tries to get a not existent comment, return null instead of throwing an error.
+
 2004-10-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b244
 
 	* Change: Missing echo in login.inc
